Fix, or try to fix, line length warnings.